[package]
name = "rgbds-obj"
version = "0.1.0" # Remember to sync html_root_url in `main.rs`
authors = ["ISSOtm <me@eldred.fr>"]
edition = "2018"
description = "A library for working with RGBDS object files."
readme = "README.md"
repository = "https://github.com/gbdev/rgbobj"
license = "MIT"
keywords = ["rgbds", "gameboy", "asm", "assembly", "gamedev"]
categories = ["development-tools", "game-development", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.release]
lto = true
