[package]
name = "rgbds-obj"
version = "0.2.1" # Remember to sync html_root_url in `lib.rs`
authors = ["ISSOtm <me@eldred.fr>", "Rangi42 <https://github.com/Rangi42>"]
edition = "2018"
description = "A library for working with RGBDS object files."
readme = "README.md"
repository = "https://github.com/gbdev/rgbobj"
license = "MIT"
keywords = ["rgbds", "gameboy", "asm", "assembly", "gamedev"]
categories = ["development-tools", "game-development", "parser-implementations"]

[dependencies]


[profile.release]
lto = true
